Added all the elements for a basic calculator

--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>The Odin JS Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="calculator">
+            <div class="title"><p>THE ODIN JS CALCULATOR</p></div>
+            <div class="calculator-display">
+                <div class="previous-display">123 +</div>
+                <div class="current-display">456</div>
+            </div>
+            <div class="calculator-keys">
+                <button class="all-clear" value="clear">AC</button>
+                <button class="delete" value="delete">⌫</button>
+                <button class="percent" value="percent">%</button>
+                <button class="operator" value="÷">÷</button>
+
+                <button class="operand" value="">7</button>
+                <button class="operand" value="">8</button>
+                <button class="operand" value="">9</button>
+                <button class="operator" value="×">×</button>
+
+                <button class="operand" value="">4</button>
+                <button class="operand" value="">5</button>
+                <button class="operand" value="">6</button>
+                <button class="operator" value="-">-</button>
+
+                <button class="operand" value="">1</button>
+                <button class="operand" value="">2</button>
+                <button class="operand" value="">3</button>
+                <button class="operator" value="+">+</button>
+
+                <button class="sign" value="sign">±</button>
+                <button class="operand" value="0">0</button>
+                <button class="decimal" value=".">.</button>
+                <button class="eval-operator" value="=">=</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
