--- a/index.html
+++ b/index.html
@@ -44,5 +44,13 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>Copyright ©
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+        The Odin Project by onnieber</p>
+    </footer>
 </body>
 </html>
