--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="calculator">
             <div class="title"><p>THE ODIN JS CALCULATOR</p></div>
             <div class="calculator-display">
-                <div class="previous-display">123 +</div>
-                <div class="current-display">456</div>
+                <div class="previous-display"></div>
+                <div class="current-display"></div>
             </div>
             <div class="calculator-keys">
                 <button class="all-clear" value="clear">AC</button>
@@ -22,19 +22,19 @@
                 <button class="percent" value="percent">%</button>
                 <button class="operator" value="÷">÷</button>
 
-                <button class="operand" value="">7</button>
-                <button class="operand" value="">8</button>
-                <button class="operand" value="">9</button>
+                <button class="operand" value="7">7</button>
+                <button class="operand" value="8">8</button>
+                <button class="operand" value="9">9</button>
                 <button class="operator" value="×">×</button>
 
-                <button class="operand" value="">4</button>
-                <button class="operand" value="">5</button>
-                <button class="operand" value="">6</button>
+                <button class="operand" value="4">4</button>
+                <button class="operand" value="5">5</button>
+                <button class="operand" value="6">6</button>
                 <button class="operator" value="-">-</button>
 
-                <button class="operand" value="">1</button>
-                <button class="operand" value="">2</button>
-                <button class="operand" value="">3</button>
+                <button class="operand" value="1">1</button>
+                <button class="operand" value="2">2</button>
+                <button class="operand" value="3">3</button>
                 <button class="operator" value="+">+</button>
 
                 <button class="sign" value="sign">±</button>
